fix overflow and padding styles for global sidebar sidebar section

--- a/client/layout/global-sidebar/style.scss
+++ b/client/layout/global-sidebar/style.scss
@@ -401,6 +401,7 @@ $brand-text: "SF Pro Text", $sans;
 
 		.sidebar__body {
 			padding-top: 0;
+			overflow-y: hidden;
 		}
 	}
 }
